feat : Output View(경주 결과 출력, 경주 우승자 출력), Controller